--- a/app/src/main/res/layout/page_item.xml
+++ b/app/src/main/res/layout/page_item.xml
@@ -2,8 +2,9 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
           android:id="@+id/tv_page"
           android:layout_width="match_parent"
-          android:layout_height="200dp"
-          android:gravity="center"
+          android:layout_height="wrap_content"
+          android:gravity="left"
+          android:paddingLeft="8dp"
           android:text="1"
           android:textColor="@color/colorAccent"
           android:textSize="40sp">
